Add Leadershipboard project code

--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.CAB302</groupId>
-    <artifactId>BugCo</artifactId>
+    <groupId>Leadershipboard</groupId>
+    <artifactId>Leadershipboard</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>BugCo</name>
+    <name>Leadershipboard</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -60,7 +60,9 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.cab302.bugco/com.cab302.bugco.HelloApplication</mainClass>
+                            <mainClass>
+                                leadershipboard.leadershipboard/leadershipboard.leadershipboard.HelloApplication
+                            </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
