--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,12 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### Database ###
+db/bugco.db
+*.db
+.idea/workspace.xml
+.idea/**/dataSources.local.xml
+
 ### VS Code ###
 .vscode/
 
