--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,19 +13,24 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'corretto'
           cache: maven
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
+
+      - name: Compile code
+        run: mvn -B compile --file pom.xml
 
       - name: Generate Javadoc
         run: mvn javadoc:javadoc
 
-      - name: Deploy to Github pages
+      - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: target/docs/javadoc
+
+      - name: Run tests
+        run: mvn test
